# hedge-fund-13f-radar

./: .env.example  .gitignore  Cargo.toml  README.md  pyproject.toml
.chp/: ADVERSARIAL_PROMPTS.md  CHP_COMPLIANCE.md  R0_CONFIG.yaml  STATE_MACHINE.md
.github/workflows/: chp-validation.yml
examples/: holdings_13f.csv
src/: consensus.rs  diff.rs  ingest.rs  lib.rs  pipeline.rs  sector.rs  types.rs
src/hedge_fund_13f_radar/: __init__.py  cli.py  core.py
src/hedge_fund_13f_radar/db/: cockroachdb_layer.py
tests/: test_13f_radar.py  test_basic.py
