[package]
name = "hedge-fund-13f-radar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hedge fund 13F filing analysis — conviction tracking and sector rotation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
statrs = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num = { workspace = true }
