[package]
name = "hedge-fund-13f-radar"
version = "0.1.0"
edition = "2021"
authors = ["icohangar-ops"]
license = "MIT"
description = "Hedge fund 13F filing analysis — conviction tracking and sector rotation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
statrs = "0.16"
ndarray = "0.15"
num-traits = "0.2"
num = "0.4"
